# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_package_library(
    name = "traj_opt",
    visibility = ["//visibility:public"],
    deps = [],
)

drake_cc_library(
    name = "trajectory_optimizer",
    hdrs = [
        "trajectory_optimizer.h",
    ],
    srcs = ["trajectory_optimizer.cc"],
    deps = [
        "//common:essential",
        "//multibody/plant",
        ":pentadiagonal_matrix",
        ":solution_data",
        ":problem_definition",
        ":problem_data",
    ],
)

drake_cc_library(
    name = "solution_data",
    hdrs = [
        "solution_data.h",
    ],
    deps = [
        "//common:essential",
    ],
)

drake_cc_library(
    name = "problem_definition",
    hdrs = [
        "problem_definition.h",
    ],
    deps = [
        "//common:essential",
    ],
)

drake_cc_library(
    name = "problem_data",
    hdrs = [
        "problem_data.h",
    ],
    deps = [
        "//common:essential",
    ],
)

drake_cc_library(
    name = "pentadiagonal_matrix",
    hdrs = [
        "pentadiagonal_matrix.h",
    ],
    deps = [
        "//common:essential",
    ],
)

drake_cc_googletest(
    name = "trajectory_optimizer_test",
    data = ["//traj_opt/examples:pendulum.urdf"],
    deps = [
        ":trajectory_optimizer",
        "//common/test_utilities:eigen_matrix_compare",
        "//common:find_resource",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)
