# -*- python -*-

load("@drake//tools/skylark:drake_cc.bzl", "drake_cc_binary")
load("//tools/lint:lint.bzl", "add_lint_tests")
load("@drake//tools/skylark:test_tags.bzl", "mosek_test_tags")

drake_cc_binary(
    name = "autodiff_overwrite",
    srcs = ["autodiff_overwrite.cc"],
    copts = ["-g", "-O2"],
    deps = [
        "//common:essential",
        "//math:autodiff",
        "//math:gradient",
    ],
)

add_lint_tests()
