# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
)
load(
    "@drake//tools/vector_gen:vector_gen.bzl",
    "drake_cc_vector_gen_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:private"])

drake_cc_vector_gen_library(
    name = "acrobot_input",
    srcs = ["acrobot_input_named_vector.yaml"],
    visibility = ["//visibility:public"],
)

drake_cc_vector_gen_library(
    name = "acrobot_params",
    srcs = ["acrobot_params_named_vector.yaml"],
    visibility = ["//visibility:public"],
)

drake_cc_vector_gen_library(
    name = "acrobot_state",
    srcs = ["acrobot_state_named_vector.yaml"],
    visibility = ["//visibility:public"],
)

drake_cc_library(
    name = "acrobot_plant",
    srcs = ["acrobot_plant.cc"],
    hdrs = ["acrobot_plant.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":acrobot_input",
        ":acrobot_params",
        ":acrobot_state",
        "//common:default_scalars",
        "//systems/controllers:linear_quadratic_regulator",
        "//systems/framework",
        "//systems/sensors:rotary_encoders",
    ],
)

drake_cc_library(
    name = "acrobot_geometry",
    srcs = ["acrobot_geometry.cc"],
    hdrs = ["acrobot_geometry.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":acrobot_params",
        ":acrobot_plant",
        "//geometry:geometry_roles",
        "//geometry:scene_graph",
        "//math:geometric_transform",
        "//systems/framework:diagram_builder",
        "//systems/framework:leaf_system",
    ],
)

drake_cc_binary(
    name = "run_passive",
    srcs = ["run_passive.cc"],
    add_test_rule = 1,
    test_rule_args = [
        "-simulation_sec=1.0",
        "-realtime_factor=0.0",
    ],
    deps = [
        ":acrobot_geometry",
        ":acrobot_plant",
        "//geometry:drake_visualizer",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

add_lint_tests()
