load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

filegroup(
    name = "models",
    srcs = [
        "spheres_in_a_box.xml",
    ],
    visibility = ["//:__pkg__"],
)

drake_cc_binary(
    name = "simulate",
    srcs = [
        "simulate.cc",
    ],
    data = [
        ":models",
    ],
    deps = [
        "//common:add_text_logging_gflags",
        "//geometry:drake_visualizer",
        "//geometry:meshcat_visualizer",
        "//multibody/contact_solvers/sap:sap_solver",
        "//multibody/meshcat:contact_visualizer",
        "//multibody/parsing:parser",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/analysis:simulator_print_stats",
        "//systems/controllers:pid_controller",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "//visualization:visualization_config_functions",
        "@gflags",
    ],
)

add_lint_tests()
