load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
)

package(default_visibility = ["//visibility:private"])

drake_cc_binary(
    name = "simple",
    srcs = ["simple.cc"],
    copts = ["-fsycl-targets=nvptx64-nvidia-cuda"],
    linkopts = ["-fsycl-targets=nvptx64-nvidia-cuda"],
)

drake_cc_binary(
    name = "add_integers",
    srcs = ["add_integers.cc"],
    copts = ["-fsycl-targets=nvptx64-nvidia-cuda"],
    linkopts = ["-fsycl-targets=nvptx64-nvidia-cuda"],
)

drake_cc_binary(
    name = "matrix_multiplication",
    srcs = ["matrix_multiplication.cc"],
    copts = [
        "-fsycl-targets=nvptx64-nvidia-cuda",
        "-Wno-error=deprecated-declarations",
        "-Wno-deprecated-declarations",
        "-Wno-error=unused-variable",
    ],
    linkopts = ["-fsycl-targets=nvptx64-nvidia-cuda"],
    deps = [
        "//common:essential",
        "@gflags"
    ],
)
