load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
)

package(default_visibility = ["//visibility:private"])

drake_cc_library(
    name = "simple",
    srcs = ["simple.cc"],
    hdrs = ["simple.h"],
    copts = [
        "-fsycl",
        "-fsycl-targets=nvptx64-nvidia-cuda,spir64",
    ],
)


drake_cc_binary(
    name = "main",
    srcs = ["main.cc"],
    copts = [
        "-fsycl",
        "-fsycl-targets=nvptx64-nvidia-cuda,spir64",
    ],
    linkopts = [
        "-fsycl",
        "-fsycl-targets=nvptx64-nvidia-cuda,spir64",
    ],
    deps = [
        ":simple",
        "//common:essential",
    ],
)
