# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_binary(
    name = "pendulum",
    srcs = ["pendulum.cc"],
    add_test_rule = 1,
    deps = [
        "//traj_opt:solution_data",
    ],
)