# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "two_acrobots_and_box",
    srcs = ["two_acrobots_and_box.cc"],
    add_test_rule = 1,
    data = [":models"],
    deps = [
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:drake_visualizer",
        "//multibody/parsing",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "super_simple",
    srcs = ["super_simple.cc"],
    add_test_rule = 1,
    deps = [
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:drake_visualizer",
        "//multibody/parsing",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
    ],
)

drake_cc_binary(
    name = "constrained_prismatic_joint",
    srcs = ["constrained_prismatic_joint.cc"],
    add_test_rule = 1,
    deps = [
        "//common:add_text_logging_gflags",
        ":test_scenario",
    ],
)

drake_cc_library(
    name = "test_scenario",
    srcs = ["test_scenario.cc"],
    hdrs = ["test_scenario.h"],
    deps = [
        "//common:find_resource",
        "//geometry:drake_visualizer",
        "//multibody/parsing",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
    ],
)

filegroup(
    name = "models",
    srcs = glob([
        "**/*.obj",
        "**/*.sdf",
        "**/*.urdf",
        "**/*.xml",
    ]),
)

add_lint_tests()
