# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "two_acrobots_and_box",
    srcs = ["two_acrobots_and_box.cc"],
    add_test_rule = 1,
    data = ["//multibody/benchmarks/acrobot:models"],
    deps = [
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:drake_visualizer",
        "//multibody/parsing",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
    ],
)

add_lint_tests()
